--- a/src/App.less
+++ b/src/App.less
@@ -15,8 +15,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  // font-size: calc(10px + 2vmin);
+  font-size: 24px;
   color: white;
+  .banner {
+    width: 750px;
+    margin-top: 100px;
+    color: #282c34;
+    font-size: 32px;
+    background: #61dafb;
+  }
 }
 
 .App-link {
